# PrototypeRenderer

./: .gitmodules  CMakeLists.txt  README.md
app/: TestApplication.cpp
src/renderer/: Renderer.cpp  Renderer.h  VkContext.cpp  VkContext.h  VkSwapchain.cpp  VkSwapchain.h
src/vkcpp/: CMakeLists.txt  ExtensionList.txt  generate.py  vk.xml  vk.xml.patch
src/vkcpp/include/vkcpp/: EnumClassBitmasks.h  FunctionLoader.h  GLFW.h  LoaderManager.h
src/vkcpp/sources/: EnumClassBitmasks.h  FunctionLoader.cpp  LoaderManager.cpp  LoaderManager.h
src/vkcpp/src/: FunctionLoader.cpp  GLFW.cpp  LoaderManager.cpp
src/vkcpp/templates/: Extension.cpp  Extension.h  ExtensionChecks.cpp  MainExtension.h  TemplateUtils.h
src/vkcpp/tests/: BitmaskTests.cpp  LoaderTests.cpp  MockGetProc.cpp  MockGetProc.h  VkCppTestsMain.cpp
